--- a/Svetosavlje/FrontEnd/index.html
+++ b/Svetosavlje/FrontEnd/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Coastal County Snapshots - NOAA Office for Coastal Management</title>
-		<meta name="DC.NOAA.CSC.title" content="Coastal County Snapshots - NOAA Office for Coastal Management" />
-		<meta name="DC.NOAA.CSC.description" content="The Coastal County Snapshots turn complex data into easy-to-understand stories, complete with charts and graphs." />
-		<meta name="DC.NOAA.CSC.creator" content="US Department of Commerce, NOAA, Coastal Service Center" />
-		<meta name="DC.NOAA.CSC.date.created" scheme="ISO8601" content="2014-08-05" />
-		<meta name="DC.NOAA.CSC.date.reviewed" scheme="ISO8601" content="2014-08-05" />
-		<meta name="DC.NOAA.CSC.language" scheme="DCTERMS.RFC1766" content="EN-US" />
-		<!--<link rel="stylesheet" href="css/style.min.css?v=1.3.6">-->
-		<link rel="stylesheet" href="css/style.dev.css" />
-		<link rel="stylesheet" href="http://leafletjs.com/dist/leaflet.css" />
-		<!--<script type="text/javascript" src="http://coast.noaa.gov/js/center-angularlitics.js"></script>-->
-		<script type="text/javascript" src="js/center-angularlitics.js"></script>
+		<title>Светосавље</title>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 
@@ -28,11 +18,16 @@
 
 
 
+
+
+
+
+
+
+
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
 		<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script> 
-		<script src="http://coast.noaa.gov/js/angulartics.js"></script>
-		<script src="http://coast.noaa.gov/js/angulartics-google-analytics.js"></script>
 
 		<script src="js/main.js"></script>
 		<script src="controllers/HomeController.js"></script>
