--- a/Svetosavlje/FrontEnd/index.html
+++ b/Svetosavlje/FrontEnd/index.html
@@ -25,10 +25,10 @@
 
 
 
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-sanitize.js"></script>
-		<script src="http://code.jquery.com/jquery-1.6.2.min.js"></script> 
+		<script src="js/angular.min.js"></script>
+		<script src="js/angular-route.min.js"></script>
+		<script src="js/angular-sanitize.js"></script>
+		<script src="js/jquery-1.6.2.min.js"></script> 
 
 		<script src="js/main.js"></script>
 		<script src="js/date-sr-Cyrl-CS.js"></script>
