--- a/Svetosavlje/FrontEnd/index.html
+++ b/Svetosavlje/FrontEnd/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Светосавље</title>
-	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<link rel="stylesheet" href="css/style.css" />
-	</head>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Светосавље</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="js/vendor/modernizr.js"></script>
+  </head>
+
 	<body>
 
 		<div ng-app="svetosavlje">
@@ -14,7 +18,6 @@
 
 			<div id="footer" ng-include src='"views/footer.html"'></div>
 		</div>
-
 
 
 
