Rad na header-u
Dodao pod-stranicu (prolog) da Sasa i ja napravimo header da radi za sve
podstraice (ono sto se ponavlja da bude u header-u)

--- a/Svetosavlje/FrontEnd/index.html
+++ b/Svetosavlje/FrontEnd/index.html
@@ -36,6 +36,7 @@
 		<script src="js/main.js"></script>
 		<script src="js/date-sr-Cyrl-CS.js"></script>
 		<script src="controllers/HomeController.js"></script>
+		<script src="controllers/PrologController.js"></script>
 		<script src="services/SharedService.js"></script>
 		<script src="services/HomeService.js"></script>
 
